--- a/App/Templates/Home/homePanelTwo.tpl.html
+++ b/App/Templates/Home/homePanelTwo.tpl.html
@@ -1,4 +1,4 @@
-﻿<div class="home-panelTwo home-panel" ng-style="{'background-image': 'url(' + panelTwo.thumbFacebookMetaTag + ')'}">
+﻿<div id="anchor{{'homePanelTwo'}}" class="home-panelTwo home-panel anchor" ng-style="{'background-image': 'url(' + panelTwo.thumbFacebookMetaTag + ')'}">
 	<div class="home-panelTwoSlider">
 		<slick init-onload=true ng-if="slidesLoaded" fade="true" arrows=false dots=true ng-bind-html="panelTwo.content | unsafe"></slick>
 	</div>
