--- a/Content/Styles/Sections/_pages.scss
+++ b/Content/Styles/Sections/_pages.scss
@@ -22,15 +22,22 @@
     -moz-transition:all 0s;
     position:absolute;
     left:0;
-    bottom:0;
+    bottom:-3.9em;
     width:100%;
     min-height:65%;
     overflow:hidden;
-    background: #00829f;
-    background: linear-gradient(to bottom, #0088a7 0%, #146dad 100%);
+    background: rgba(#00829f, .63);
+    background: linear-gradient(to bottom, rgba(#0088a7, .8) 0%, rgba(#146dad, .8) 100%);
     backdrop-filter:blur(5px);
     -webkit-backdrop-filter:blur(5px);
     padding-bottom:6em;
+    padding-left:1em;
+    padding-right:1em;
+    @media (min-width:$screen-sm-min){
+        bottom:-4.4em;
+        padding-left:0;
+        padding-right:0;
+    }
 }
 
 .page-content {
