--- a/App/Templates/Home/homePanelFour.tpl.html
+++ b/App/Templates/Home/homePanelFour.tpl.html
@@ -1,10 +1,9 @@
-﻿
-<div class="home-panelFour home-panel" ng-style="{'background-image': 'url(' + panelFour.thumbFacebookMetaTag + ')'}">
+﻿<div id="anchor{{'homePanelFour'}}" class="home-panelFour home-panel" ng-style="{'background-image': panelFour.thumbFacebookMetaTag === null ? '' : 'url(' + panelFour.thumbFacebookMetaTag + ')'}">
 	<div class="home-container">
 		<div class="home-content" ng-bind-html="panelFour.content | unsafe"></div>
 	</div>
-	
-	<div class="tv">
+
+	<div class="tv" ng-hide="panelFour.customHeadContent === ''">
 		<youtube-video video-id="panelFour.customHeadContent" player-vars="playerVars"></youtube-video>
 	</div>
 </div>
