--- a/Content/Styles/Common/_footer.scss
+++ b/Content/Styles/Common/_footer.scss
@@ -8,7 +8,7 @@
     padding: 1em 0;
     overflow:hidden;
     z-index:250;
-    opacity:0;
+    display:none;
     &:after {
         background:rgba(255,255,255,.5);
         filter: blur(2px);
