--- a/Content/Styles/Common/_globals.scss
+++ b/Content/Styles/Common/_globals.scss
@@ -12,7 +12,6 @@ html, body {
 
 body {
 	margin: 0;
-	padding:3.9em 0 0;
 	color: $black;
 	line-height: 1.6em;
     background:$blue;
@@ -24,12 +23,13 @@ body {
     > [ui-view] {
         min-height:calc(100vh - 4em);
         position:relative;
+        padding:3.9em 0 0;
+        @media (min-width:$screen-sm-min) {
+            padding:4.2em 0 0;
+        }
     }
-    @media (min-width:$screen-sm-min) {
-        padding:4.1em 0 0;
-    }
-	&.loading {
-		&:before {
+
+    &:before {
 			display: block;
 			content: "";
 			left: 0;
@@ -37,8 +37,10 @@ body {
 			width: 100%;
 			height: 100%;
 			position: fixed;
-			z-index: 99991;
-			background: rgba(255,255,255,.6);
+			transition:opacity .35s;
+			background: rgba($blue,.98);
+            opacity:0;
+            z-index:-999;
 		}
 		&:after {
 			@extend .loadingIndicator;
@@ -47,8 +49,19 @@ body {
 			left: calc(50% - 30px);
 			display: block;
 			content: "";
-			z-index: 99992;
+			z-index:-999;
+            opacity:0;
 		}
+    
+	&.loading {
+		&:before {
+            z-index: 99991;
+            opacity:1;
+		}
+        &:after {
+            z-index: 99992;
+            opacity:1;
+        }
 	}
 }
 img {
@@ -63,11 +76,14 @@ img {
     border-top: 6px solid #ddd;
     border-right: 6px solid #ddd;
     border-bottom: 6px solid #ddd;
-    border-left: 6px solid $red;
+    border-left: 6px solid $blue;
     border-radius: 50%;
-    -webkit-animation: rotate .75s infinite linear, opacity 1s forwards;
-    -moz-animation: rotate .75s infinite linear, opacity 1s forwards;
-    animation: rotate .75s infinite linear, opacity 1s forwards;
+    .loading & {
+        -webkit-animation: rotate .75s infinite linear, opacity 1s forwards;
+        -moz-animation: rotate .75s infinite linear, opacity 1s forwards;
+        animation: rotate .75s infinite linear, opacity 1s forwards;
+    }
+    
     opacity: 0;
     padding: 0;
 }
@@ -101,26 +117,45 @@ div#preload {
 	}
 }
 
-#wrapper {
+.wrapper {
     position:relative;
     margin:0 auto;
     @media (min-width:$screen-sm-min) {
         margin:0 auto 4em;
         max-width:1280px;
+        display:flex;
     }
 }
 
-.leftSidebar,
-.content,
-.rightSidebar {
-    display:inline-block;
-    vertical-align:top;
+.content {
+    margin:0 1em;
+    @media (min-width:$screen-sm-min) {
+        flex:0 0 60%;
+        margin:1em 1em 0 1em;
+    }
 }
 
-.content.margin-left-lg.margin-top-lg {
-    @media (max-width:$screen-sm-max) {
-         margin:0 auto !important;
-         display:block;
+[class$="Featured ng-scope"] {
+   display:none;
+    @media (min-width:$screen-sm-min) {
+        flex:0 0 20%;
+        display:block;
+        background: rgba(255,255,255,0.20);
+    }
+}
+
+[class$="Search ng-scope"] {
+    width:17.5%;
+    flex:0 0 20%;
+    background:white;
+}
+
+.leftSidebar {
+    display:none;
+    @media (min-width:$screen-sm-min) {
+        height:100%;
+        display:block;
+        padding:0 0 2em;
     }
 }
 
