--- a/Content/Styles/Sections/_home.scss
+++ b/Content/Styles/Sections/_home.scss
@@ -20,6 +20,23 @@
             }
         }
     }
+    > [ui-view] {
+        padding-top:0;
+    }
+}
+
+.home-scrollTrigger {
+    cursor:pointer;
+    opacity:1;
+    transition:all .35s;
+    &:hover {
+        text-decoration:none;
+    }
+    .no-touchevents & {
+        &:hover {
+            opacity:.7;
+        }
+    }
 }
 
 .home-navigation {
@@ -60,7 +77,8 @@
 
 .home-panel {
     overflow:hidden;
-    background-color:white;
+    background-color: #00829f;
+     background: linear-gradient(to bottom, #0088a7 0%, #146dad 100%);
     @media (min-width:$screen-sm-min){
         height:100vh;
         background-size:cover;
@@ -68,7 +86,50 @@
         background-position:center top;
         position:relative;
     }
-    
+    .tv {
+        z-index: 1;
+        max-height:50vh;
+        overflow: hidden;
+
+        @media(min-width:$screen-sm-min){
+            position: absolute;
+            top: 0;
+            left: 0;
+            height:100%;
+            width:100%;
+            max-height:100vh;
+        }
+        
+  
+        iframe {
+            z-index: 1;
+            margin: 1em auto;
+
+            opacity: 0;
+            transition: opacity .5s;
+            display:block;
+
+            @media (max-with:$screen-sm-max){
+                height:auto;
+                width:100%;
+            }
+
+            @media (min-width:$screen-sm-min){
+                position: absolute;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                float:none;
+                margin:auto;
+                float:left;
+            }
+
+        &.active {
+            opacity: 1;
+        }
+        }
+    }
 }
 
 .home-panelOne {
@@ -202,7 +263,7 @@
         }
     }
 
-    .slick-dots li[aria-selected="true"] button, 
+    .slick-dots li.slick-active button, 
     .slick-dots li button:hover {
         opacity: 1;
     }
@@ -223,7 +284,7 @@
     background: linear-gradient(to bottom,  rgba(0,136,167,1) 0%,rgba(20,109,173,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0088a7', endColorstr='#146dad',GradientType=0 ); /* IE6-9 */
     @media (min-width:$screen-sm-min){
-        &:after {
+        /*&:after {
             content: "\e90e";
             font-family: 'SA-UI-ELEMENTS' !important;
             color: white;
@@ -231,6 +292,17 @@
             bottom: 2em;
             left: 50%;
             font-size: 44px;
+        }*/
+    }
+
+    .home-scrollTrigger {
+        color: white;
+        font-size: 44px;
+        margin: 0 auto;
+        display: block;
+        text-align: center;
+        &:visited {
+            color:white;
         }
     }
      
@@ -250,7 +322,7 @@
     }
     .slick-slider {
         position: relative;
-        min-height:100vh;
+        //min-height:100vh;
         @media (min-width:$screen-sm-min){
             min-height:10vh;
         }
@@ -312,50 +384,10 @@
 }
 
 .home-panelFour {
-    .tv {
-        z-index: 1;
-        max-height:50vh;
-        overflow: hidden;
-
-        @media(min-width:$screen-sm-min){
-            position: absolute;
-            top: 0;
-            left: 0;
-            height:100%;
-            width:100%;
-            max-height:100vh;
-        }
-        
-  
-      iframe {
-            z-index: 1;
-            margin: auto;
-
-            opacity: 0;
-            transition: opacity .5s;
-            
-            float:left;
-
-            @media (max-with:$screen-sm-max){
-                height:auto;
-                width:100%;
-            }
-
-            @media (min-width:$screen-sm-min){
-                position: absolute;
-                top: 0;
-                right: 0;
-                bottom: 0;
-                left: 0;
-                float:none;
-            }
-
-        &.active {
-            opacity: 1;
-        }
-      }
+    background-color:white;
+    @media (min-width:$screen-sm-min){
+         background: linear-gradient(to bottom, #0088a7 0%, #146dad 100%);
     }
-
     .home-container {
         position: relative;
         color:black;
