--- a/Content/Styles/Sections/_search.scss
+++ b/Content/Styles/Sections/_search.scss
@@ -1,17 +1,4 @@
-﻿.leftSidebar {
-    display:none;
-    background:#fff;
-    @media (min-width:$screen-sm-min) {
-        display:inline-block;
-        max-width:400px;
-        width:17.5%;
-        height:100%;
-        min-height:100vh;
-        padding:0 0 2em;
-    }
-}
-
-.featuredPost-list,
+﻿.featuredPost-list,
 .popularSearches {
     @include listReset;
 }
@@ -87,6 +74,7 @@ $elements: 10;
         margin:2.75em 0 0;
         border-bottom: 1px solid #E0E0E0;
         padding: 0 0 .25em 1.8em;
+        position:relative;
     }
     .search-term {
         font-weight:bold;
@@ -96,6 +84,22 @@ $elements: 10;
         padding: .4em 0 0 4.5em;
         font-size: 12px;
         color: #95989A;
+    }
+
+    .search-clear {
+        position: absolute;
+        right: 9px;
+        top: 10px;
+        cursor:pointer;
+        .path1:before {
+            color:black;
+            transition:color .35s;
+        }
+        &:hover {
+            .path1:before {
+                color:$blue;
+            }
+        }
     }
 }
 
