--- a/App/Templates/Home/homePanelThree.tpl.html
+++ b/App/Templates/Home/homePanelThree.tpl.html
@@ -1,4 +1,4 @@
-﻿<div class="home-panelThree home-panel" ng-style="{'background-image': 'url(' + panelThree.thumbFacebookMetaTag + ')'}">
+﻿<div  id="anchor{{'homePanelThree'}}" class="home-panelThree home-panel" ng-style="{'background-image': 'url(' + panelThree.thumbFacebookMetaTag + ')'}">
 	<div class="home-panelThreeSlider">
 		<slick init-onload=true ng-if="slidesLoaded" fade="true" arrows=false dots=true ng-bind-html="panelThree.content | unsafe"></slick>
 		<a class="home-scrollTrigger" ng-click="vm.gotoAnchor('homePanelFour')"><i class="dn-icon-arrow-down"></i></a>
