--- a/Content/Styles/Sections/_blogPosts.scss
+++ b/Content/Styles/Sections/_blogPosts.scss
@@ -1,8 +1,13 @@
-﻿.blogPost {
+﻿.wrapper .content .ng-scope:last-child article:last-of-type {
+    margin-bottom:0;
+}
+
+.blogPost {
     background:white;
     padding: 3.5em 2.2em 4.5em;
     position:relative;
     box-shadow:0 0 5px rgba(0,0,0,.25);
+    margin-bottom:1em;
    
     @media (min-width:$screen-sm-min){
          header {
